--- a/src/main/resources/assets/morecommands/lang/en_us.json
+++ b/src/main/resources/assets/morecommands/lang/en_us.json
@@ -16,6 +16,8 @@
   "gamerule.maxHomes.description": "The amount of homes you can set, 0 disables homes completely, -1 is infinite.",
   "gamerule.doSilkSpawners": "Do Silk Spawners",
   "gamerule.doSilkSpawners.description": "Whether spawners should drop when mined with silk touch.",
+  "gamerule.randomOrderPlayerTick": "Random Order Player Tick",
+  "gamerule.randomOrderPlayerTick.description": "Whether players should be ticked in a random order rather than starting at whomever joined first. Makes things like dropparties more fair.",
   "gamerule.hopperTransferCooldown": "Hopper Transfer Cooldown",
   "gamerule.hopperTransferCooldown.description": "The amount of ticks a hopper waits between each item transfer.",
   "gamerule.hopperTransferRate": "Hopper Transfer Rate",
@@ -32,18 +34,28 @@
   "gamerule.tpaTimeout.description": "The amount of ticks it takes for a TPA request to timeout.",
   "gamerule.fluidsInfinite": "Fluids Infinite",
   "gamerule.fluidsInfinite.description": "Whether all fluids can create new source blocks like water.",
-  "gamerule.randomOrderPlayerTick": "Random Order Player Tick",
-  "gamerule.randomOrderPlayerTick.description": "Whether players should be ticked in a random order rather than starting at whomever joined first. Makes things like dropparties more fair.",
+  "gamerule.doLiquidFlow": "Do Liquid Flow",
+  "gamerule.doLiquidFlow.description": "Whether liquids should flow or stay stationary.",
   "gamerule.vaultRows": "Vault Rows",
   "gamerule.vaultRows.description": "The amount of rows vaults may have.",
   "gamerule.vaults": "Vaults",
   "gamerule.vaults.description": "How many vaults each player has. Set to 0 to disable vaults.",
+  "gamerule.nicknameLimit": "Nickname Limit",
+  "gamerule.nicknameLimit.description": "The maximum amount of characters excluding formattings a nickname may have.",
   "gamerule.doSignColours": "Do Sign Colours",
   "gamerule.doSignColours.description": "Whether normal players may use colours on signs. Operators ignore this value.",
   "gamerule.doBookColours": "Do Book Colours",
   "gamerule.doBookColours.description": "Whether normal players may use colours in books. Operators ignore this value.",
   "gamerule.doChatColours": "Do Chat Colours",
   "gamerule.doChatColours.description": "Whether normal players may use colours in chat messages. Operators ignore this value.",
+  "gamerule.doItemColours": "Do Item Colours",
+  "gamerule.doItemColours.description": "Whether normal players may use colours in item names. Operators ignore this value.",
+  "gamerule.doEnchantLevelLimit": "Do Enchant Level Limit",
+  "gamerule.doEnchantLevelLimit.description": "Whether the maximum level you may enchant items with using an enchantment table should be capped at level 30.",
+  "gamerule.doPriorWorkPenalty": "Do Prior Work Penalty",
+  "gamerule.doPriorWorkPenalty.description": "Whether altering an item in an anvil should make the next alteration more expensive.",
+  "gamerule.doItemsFireDamage": "Do Items Fire Damage",
+  "gamerule.doItemsFireDamage.description": "Whether item entities should sustain fire damage.",
   "commands.data.item.query": "%s has the following item data: %s",
   "commands.data.item.get": "%s on item stack %s after scale factor of %s is %s"
 }
