Update to 1.19.2 and fix the compat remap issue This makes JASM no longer required either

--- a/common/src/main/resources/assets/morecommands/lang/en_us.json
+++ b/common/src/main/resources/assets/morecommands/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "key.morecommands.toggleInfoHud": "Toggle info HUD",
+  "key.morecommands.powerToolCycle": "Powertool Cycle",
   "itemGroup.morecommands.unobtainable_items": "§dUnobtainable Items",
   "block.morecommands.locked_chest": "§dLocked Chest",
   "attribute.morecommands.reach": "Reach",
